cfn_benchmark/cfn_templates/walkerpr__aws_kubernetes_infrastructure_with_central_services/common/files/cloudFormationTemplates/Deployment/childTemplates/rke/sampleDeploymentRKESecurity.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Template for OpenShift Cluster Security Elements (Security Groups & IAM)
Parameters:
  pKubernetesType:
    Type: String
  pInfrastructureName:
    MaxLength: 27
    MinLength: 1
    ConstraintDescription: Infrastructure name must be alphanumeric, start with a letter, and have a maximum of 27 characters.
    Description: A short, unique cluster ID used to tag cloud resources and identify items owned or used by the cluster.
    Type: String
  pSampleEnv:
    Type: String
    Description: Production? Test?
    AllowedValues:
      - prod
      - test
  pVpcPrefix:
    Description: Prefix for VPC.
    Type: String
  pCentralServicesSubnetPrefix:
    Description: Prefix for Central Services Subnet.
    Type: String
  pEnvironment:
    Type: String
    Description: Development? Test Upstream? Prod Upstream?
    AllowedValues:
      - dev
      - upprod
      - uptest
  pDeploymentNumber:
    ConstraintDescription: "The number of the deployment."
    MinValue: 0
    MaxValue: 20
    Description: "The number of the deployment."
    Type: Number
  pDomain:
    Description: The domain representing the environment (ex. sample.sample.dev or sample.sample.dev)
    Type: String
    AllowedValues:
      - sample
      - sample
  pVpcId:
    Description: The VPC-scoped resources will belong to this VPC.
    Type: AWS::EC2::VPC::Id
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "Cluster Information"
        Parameters:
          - pInfrastructureName
      - Label:
          default: "Network Configuration"
        Parameters:
          - pVpcId
          - pVpcPrefix
    ParameterLabels:
      pInfrastructureName:
        default: "Infrastructure Name"
      pVpcId:
        default: "VPC ID"
      pVpcPrefix:
        default: "VPC CIDR"
Resources:
  kubernetesJoinSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: !Sub ${pDeploymentNumber}-${pEnvironment}-${pKubernetesType}/token
      Description: "This secret has a dynamically generated secret password."
      GenerateSecretString:
        SecretStringTemplate: '{"username": "rancher"}'
        GenerateStringKey: "password"
        PasswordLength: 16
        ExcludeLowercase: False
        ExcludeNumbers: False
        ExcludePunctuation: True
        ExcludeUppercase: False
        IncludeSpace: False
        RequireEachIncludedType: True
  ELBSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Load Balancer Security Group
      SecurityGroupIngress:
        - IpProtocol: -1
          SourcePrefixListId: !Ref pCentralServicesSubnetPrefix
        - IpProtocol: -1
          SourcePrefixListId: !Ref pVpcPrefix
      VpcId: !Ref pVpcId
      Tags:
        - Key: "deploymentType"
          Value: aaDeployment
        - Key: "deploymentEnvironment"
          Value: !Ref pEnvironment
        - Key: "aaDeploymentNumber"
          Value: !Ref pDeploymentNumber
        - Key: "kubernetesPlatform"
          Value: !Ref pKubernetesType
  ControlPlaneSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster ControlPlane Security Group
      SecurityGroupIngress:
        - IpProtocol: -1
          SourcePrefixListId: !Ref pCentralServicesSubnetPrefix
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourcePrefixListId: !Ref pVpcPrefix
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourcePrefixListId: !Ref pVpcPrefix
        - IpProtocol: icmp
          FromPort: 0
          ToPort: 0
          SourcePrefixListId: !Ref pVpcPrefix
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourcePrefixListId: !Ref pVpcPrefix
        - IpProtocol: tcp
          ToPort: 6443
          FromPort: 6443
          SourcePrefixListId: !Ref pVpcPrefix
        - IpProtocol: tcp
          FromPort: 9345
          ToPort: 9345
          SourcePrefixListId: !Ref pVpcPrefix
      VpcId: !Ref pVpcId
      Tags:
        - Key: "deploymentType"
          Value: aaDeployment
        - Key: "deploymentEnvironment"
          Value: !Ref pEnvironment
        - Key: "aaDeploymentNumber"
          Value: !Ref pDeploymentNumber
        - Key: "kubernetesPlatform"
          Value: !Ref pKubernetesType
  WorkerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Cluster Worker Security Group
      SecurityGroupIngress:
        - IpProtocol: -1
          SourcePrefixListId: !Ref pCentralServicesSubnetPrefix
        - IpProtocol: icmp
          FromPort: 0
          ToPort: 0
          SourcePrefixListId: !Ref pVpcPrefix
        - IpProtocol: tcp
          ToPort: 6443
          FromPort: 6443
          SourcePrefixListId: !Ref pVpcPrefix
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourcePrefixListId: !Ref pVpcPrefix
      VpcId: !Ref pVpcId
      Tags:
        - Key: "deploymentType"
          Value: aaDeployment
        - Key: "deploymentEnvironment"
          Value: !Ref pEnvironment
        - Key: "aaDeploymentNumber"
          Value: !Ref pDeploymentNumber
        - Key: "kubernetesPlatform"
          Value: !Ref pKubernetesType
  ControlPlaneIngressELB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ELBSecurityGroup.GroupId
      Description: elb
      IpProtocol: -1
  ControlPlaneIngressEtcd:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: etcd
      FromPort: 2379
      ToPort: 2380
      IpProtocol: tcp
  ControlPlaneIngressVxlan:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Vxlan packets
      FromPort: 9345
      ToPort: 9345
      IpProtocol: udp
  ControlPlaneIngressWorkerVxlan:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Vxlan packets
      FromPort: 9345
      ToPort: 9345
      IpProtocol: udp
  ControlPlaneIngressKubelet:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Kubelet
      FromPort: 10250
      ToPort: 10250
      IpProtocol: tcp
  ControlPlaneIngressWorkerKubelet:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Kubelet
      FromPort: 10250
      ToPort: 10250
      IpProtocol: tcp
  ControlPlaneIngressIpsecIke:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: IPsec IKE packets
      FromPort: 500
      ToPort: 500
      IpProtocol: udp
  ControlPlaneIngressIpsecNat:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: IPsec NAT-T packets
      FromPort: 4500
      ToPort: 4500
      IpProtocol: udp
  ControlPlaneIngressIpsecEsp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: IPsec ESP packets
      IpProtocol: 50
  ControlPlaneIngressWorkerIpsecIke:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: IPsec IKE packets
      FromPort: 500
      ToPort: 500
      IpProtocol: udp
  ControlPlaneIngressWorkerIpsecNat:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: IPsec NAT-T packets
      FromPort: 4500
      ToPort: 4500
      IpProtocol: udp
  ControlPlaneIngressWorkerIpsecEsp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: IPsec ESP packets
      IpProtocol: 50
  ControlPlaneIngressInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: tcp
  ControlPlaneIngressWorkerInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: tcp
  ControlPlaneIngressInternalUDP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: udp
  ControlPlaneIngressWorkerInternalUDP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: udp
  ControlPlaneIngressKube:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Kubernetes kubelet, scheduler and controller manager
      FromPort: 10250
      ToPort: 10259
      IpProtocol: tcp
  ControlPlaneIngressWorkerKube:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Kubernetes kubelet, scheduler and controller manager
      FromPort: 10250
      ToPort: 10259
      IpProtocol: tcp
  ControlPlaneIngressIngressServices:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: tcp
  ControlPlaneIngressWorkerIngressServices:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: tcp
  ControlPlaneIngressIngressServicesUDP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: udp
  ControlPlaneIngressWorkerIngressServicesUDP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: udp
  WorkerIngressELB:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ELBSecurityGroup.GroupId
      Description: elb
      IpProtocol: -1
  WorkerIngressVxlan:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Vxlan packets
      FromPort: 9345
      ToPort: 9345
      IpProtocol: udp
  WorkerIngressControlPlaneVxlan:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Vxlan packets
      FromPort: 9345
      ToPort: 9345
      IpProtocol: udp
  WorkerIngressKubelet:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Kubelet
      FromPort: 10250
      ToPort: 10250
      IpProtocol: tcp
  WorkerIngressControlPlaneKubelet:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Kubelet
      FromPort: 10250
      ToPort: 10250
      IpProtocol: tcp
  WorkerIngressIpsecIke:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: IPsec IKE packets
      FromPort: 500
      ToPort: 500
      IpProtocol: udp
  WorkerIngressIpsecNat:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: IPsec NAT-T packets
      FromPort: 4500
      ToPort: 4500
      IpProtocol: udp
  WorkerIngressIpsecEsp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: IPsec ESP packets
      IpProtocol: 50
  WorkerIngressControlPlaneIpsecIke:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: IPsec IKE packets
      FromPort: 500
      ToPort: 500
      IpProtocol: udp
  WorkerIngressControlPlaneIpsecNat:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: IPsec NAT-T packets
      FromPort: 4500
      ToPort: 4500
      IpProtocol: udp
  WorkerIngressControlPlaneIpsecEsp:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: IPsec ESP packets
      IpProtocol: 50
  WorkerIngressInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: tcp
  WorkerIngressControlPlaneInternal:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: tcp
  WorkerIngressInternalUDP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: udp
  WorkerIngressControlPlaneInternalUDP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Internal cluster communication
      FromPort: 9000
      ToPort: 9999
      IpProtocol: udp
  WorkerIngressKube:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Kubernetes secure kubelet port
      FromPort: 10250
      ToPort: 10250
      IpProtocol: tcp
  WorkerIngressWorkerKube:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Internal Kubernetes communication
      FromPort: 10250
      ToPort: 10250
      IpProtocol: tcp
  WorkerIngressIngressServices:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: tcp
  WorkerIngressControlPlaneIngressServices:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: tcp
  WorkerIngressIngressServicesUDP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt WorkerSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: udp
  WorkerIngressControlPlaneIngressServicesUDP:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      GroupId: !GetAtt WorkerSecurityGroup.GroupId
      SourceSecurityGroupId: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: Kubernetes ingress services
      FromPort: 30000
      ToPort: 32767
      IpProtocol: udp
  ControlPlaneIamRole:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        - !Sub arn:${AWS::Partition}:iam::aws:policy/service-role/AmazonEFSCSIDriverPolicy
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
  ControlPlaneIamRoleAdditionalPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      Description: "ec2DefaultRoleAdditionalPolicy"
      ManagedPolicyName: !Sub ${pKubernetesType}-${pInfrastructureName}-cp-policy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: VisualEditor0
            Effect: Allow
            Action:
              - "ssm:GetParameter"
              - "ec2:AttachVolume"
              - "ec2:AuthorizeSecurityGroupIngress"
              - "ec2:CreateSecurityGroup"
              - "ec2:CreateTags"
              - "ec2:CreateVolume"
              - "ec2:DeleteSecurityGroup"
              - "ec2:DeleteVolume"
              - "ec2:Describe*"
              - "ec2:DetachVolume"
              - "ec2:ModifyInstanceAttribute"
              - "ec2:ModifyVolume"
              - "ec2:RevokeSecurityGroupIngress"
              - "elasticloadbalancing:AddTags"
              - "elasticloadbalancing:AttachLoadBalancerToSubnets"
              - "elasticloadbalancing:ApplySecurityGroupsToLoadBalancer"
              - "elasticloadbalancing:CreateListener"
              - "elasticloadbalancing:CreateLoadBalancer"
              - "elasticloadbalancing:CreateLoadBalancerPolicy"
              - "elasticloadbalancing:CreateLoadBalancerListeners"
              - "elasticloadbalancing:CreateTargetGroup"
              - "elasticloadbalancing:ConfigureHealthCheck"
              - "elasticloadbalancing:DeleteListener"
              - "elasticloadbalancing:DeleteLoadBalancer"
              - "elasticloadbalancing:DeleteLoadBalancerListeners"
              - "elasticloadbalancing:DeleteTargetGroup"
              - "elasticloadbalancing:DeregisterInstancesFromLoadBalancer"
              - "elasticloadbalancing:DeregisterTargets"
              - "elasticloadbalancing:Describe*"
              - "elasticloadbalancing:DetachLoadBalancerFromSubnets"
              - "elasticloadbalancing:ModifyListener"
              - "elasticloadbalancing:ModifyLoadBalancerAttributes"
              - "elasticloadbalancing:ModifyTargetGroup"
              - "elasticloadbalancing:ModifyTargetGroupAttributes"
              - "elasticloadbalancing:RegisterInstancesWithLoadBalancer"
              - "elasticloadbalancing:RegisterTargets"
              - "elasticloadbalancing:SetLoadBalancerPoliciesForBackendServer"
              - "elasticloadbalancing:SetLoadBalancerPoliciesOfListener"
              - "kms:DescribeKey"
              - secretsmanager:GetResourcePolicy
              - secretsmanager:GetSecretValue
              - secretsmanager:DescribeSecret
              - secretsmanager:ListSecretVersionIds
            Resource: "*"
          - Sid: VisualEditor1
            Effect: Allow
            Action:
            - "s3:PutObject"
            Resource: "*"
      Roles:
        - !Ref ControlPlaneIamRole
  ControlPlaneInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: "ControlPlaneIamRole"
  WorkerIamRole:
    Type: AWS::IAM::Role
    Properties:
      ManagedPolicyArns:
        - !Sub arn:${AWS::Partition}:iam::aws:policy/service-role/AmazonEFSCSIDriverPolicy
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: "Allow"
            Principal:
              Service:
                - "ec2.amazonaws.com"
            Action:
              - "sts:AssumeRole"
  WorkerIamRoleAdditionalPolicy:
    Type: AWS::IAM::ManagedPolicy
    Properties:
      Description: "ec2DefaultRoleAdditionalPolicy"
      ManagedPolicyName: !Sub ${pKubernetesType}-${pInfrastructureName}-worker-policy
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Sid: VisualEditor0
            Effect: Allow
            Action:
            - "ec2:DescribeInstances"
            - "ec2:DescribeRegions"
            - secretsmanager:GetResourcePolicy
            - secretsmanager:GetSecretValue
            - secretsmanager:DescribeSecret
            - secretsmanager:ListSecretVersionIds
            Resource: "*"
          - Sid: VisualEditor1
            Effect: Allow
            Action:
            - "s3:PutObject"
            Resource: "*"
      Roles:
        - !Ref WorkerIamRole
  WorkerInstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Roles:
        - Ref: "WorkerIamRole"
  kubernetesJoinSecretParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/secret/${pDeploymentNumber}-${pEnvironment}/${pKubernetesType}/kubernetes/id"
      Type: String
      Value: !GetAtt kubernetesJoinSecret.Id
      Description: SSM Parameter for kubernetesJoinSecretParameter
  ELBSecurityGroupGroupIdParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/ec2/edge-elb-${pDeploymentNumber}-${pEnvironment}/${pKubernetesType}/securitygroup/id"
      Type: String
      Value: !GetAtt ELBSecurityGroup.GroupId
      Description: SSM Parameter for ELBSecurityGroup
  ControlPlaneSecurityGroupIdParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/ec2/cp-${pDeploymentNumber}-${pEnvironment}/${pKubernetesType}/securitygroup/id"
      Type: String
      Value: !GetAtt ControlPlaneSecurityGroup.GroupId
      Description: SSM Parameter for ControlPlaneSecurityGroupId
  WorkerSecurityGroupId:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/ec2/worker-${pDeploymentNumber}-${pEnvironment}/${pKubernetesType}/securitygroup/id"
      Type: String
      Value: !GetAtt WorkerSecurityGroup.GroupId
      Description: SSM Parameter for WorkerSecurityGroupId
  ControlPlaneInstanceProfileParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/ec2/cp-${pDeploymentNumber}-${pEnvironment}/${pKubernetesType}/iam/profile"
      Type: String
      Value: !Ref ControlPlaneInstanceProfile
      Description: SSM Parameter for ControlPlaneInstanceProfile
  WorkerInstanceProfileParameter:
    Type: AWS::SSM::Parameter
    Properties:
      Name: !Sub "/sample/ec2/worker-${pDeploymentNumber}-${pEnvironment}/${pKubernetesType}/iam/profile"
      Type: String
      Value: !Ref WorkerInstanceProfile
      Description: SSM Parameter for WorkerInstanceProfile
Outputs:
  ELBSecurityGroupGroupId:
    Value: !GetAtt ELBSecurityGroup.GroupId
  ControlPlaneSecurityGroupId:
    Value: !GetAtt ControlPlaneSecurityGroup.GroupId
  WorkerSecurityGroupId:
    Value: !GetAtt WorkerSecurityGroup.GroupId
  ControlPlaneInstanceProfileId:
    Value: !Ref ControlPlaneInstanceProfile
  WorkerInstanceProfileId:
    Value: !Ref WorkerInstanceProfile
